# dynamo

./: Cargo.toml  README.org  install.sh  pyproject.toml  rustfmt.toml  setup.py
dynamo/: vis.py
python/dynamo/: __init__.py  vis.py
python/dynamo/rp/: __init__.py  dynamo_rp.py  hull_generation.py  pdb_generation.py  rp_utility.py
rust/dynamo-base/: Cargo.toml  pyproject.toml
rust/dynamo-base/dynamo/: vis.py
rust/dynamo-base/src/: lib.rs
rust/dynamo_base/: Cargo.toml  README.org  pyproject.toml
rust/dynamo_base/dynamo/: vis.py
rust/dynamo_base/src/: lib.rs
src/: lib.rs
